aks/kubeapps/kubeapps-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeapps-ingress
  # issue site: https://stackoverflow.com/questions/72504384/nextjs-docker-container-in-k8s-throwing-uncaught-syntaxerror-unexpected-token
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - kubeapps.k8s.appelent.com
    secretName: tls-secret-kubeapps
  rules:
  - host: kubeapps.k8s.appelent.com
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: kubeapps
            port:
              number: 80
